6.1
	+ Add pagination to the tree view
	+ Do not try to listen on unconfigured network interfaces
6.0.1
	+ Add missing dynamic RPC ports in firewall rules
6.0
	+ Integration with RADIUS module
	+ Integrate Samba 4.7
	+ Fix group permissions when selecting "All domain users"
	+ Remove unused 1024 port from service list
	+ Add confkey to allow Administrator user in shares permissions for
	  backwards compatibility with Zentyal 3.0
5.1.2
	+ Enforce share directory creation if not exists, even if not tagged
	+ Enforce change of homeDrive for existing users
	+ Fix regression deleting share directory after removing ebox ACL
	+ Fix bug with shared state for shares and roaming profiles sync
5.1.1
	+ Add administrators also to write list in smb.conf
5.1
	+ Domain is now a menu item instead of a folder with just one subitem
	+ Add notice about GPO management in Domain section
	+ Set homeDrive, homeDirectory and profilePath attributes after
	  adding new users without need of explicit save change operation
	+ Remove no longer required zentyal user ACLs on share paths
	+ Comment field is now optional when adding a share
	+ Explicit set of valid users write/read/admin lists for share security
	  unless "unmanaged_acls = yes" is set in /etc/zentyal/samba.conf
	+ Check domain functional level <= 2008 R2 before joining
	+ Manage thumbnailPhotos from share in samba.conf and edit user
	  UI in commercial editions
	+ Do not allow to add OUs inside containers
	+ Allow to execute ad-migrate directly
	+ Disable expiration for Kerberos service accounts
	+ Add ZFS support for Samba Shares
	+ Avoid no such daemon error in zentyal.log when module not configured
5.0.10
	+ Integrate Samba 4.6
	+ Remove manipulation or resolv.conf in standalone DC provision
	  no longer required with the fix in zentyal-dns 5.0.3
	+ Different resolv.conf manipulation in ADC depending if we
	  are joining a Windows DC or a Zentyal one, always use
	  127.0.0.1 when the provision is finished
5.0.9